--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-source-filesystem": "^2.2.2",
     "gatsby-transformer-remark": "^2.7.1",
     "gatsby-transformer-sharp": "^2.3.13",
+    "gsap": "^3.2.6",
     "intl": "^1.2.5",
     "jquery": "^3.4.1",
     "materialize-css": "^1.0.0-rc.2",
@@ -41,6 +42,8 @@
     "rehype-stringify": "^6.0.1",
     "remark-parse": "^7.0.2",
     "remark-rehype": "^6.0.0",
+    "scrollmagic": "^2.0.7",
+    "scrollmagic-plugin-gsap": "^1.0.4",
     "slick-carousel": "^1.8.1",
     "to-vfile": "^6.1.0",
     "unified": "^8.4.2",
