--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Like Water Design, LLC <likewaterdesignco@gmail.com>",
   "dependencies": {
+    "@material-ui/styles": "^4.9.10",
     "@reach/dialog": "^0.9.1",
     "@reach/tabs": "^0.9.1",
     "@reach/visually-hidden": "^0.9.0",
@@ -15,6 +16,7 @@
     "gatsby-link": "^2.2.30",
     "gatsby-plugin-intl": "^0.3.3",
     "gatsby-plugin-manifest": "^2.2.39",
+    "gatsby-plugin-material-ui": "^2.1.6",
     "gatsby-plugin-netlify-cms": "^4.2.0",
     "gatsby-plugin-netlify-identity": "0.0.3",
     "gatsby-plugin-offline": "^3.0.32",
@@ -28,7 +30,7 @@
     "intl": "^1.2.5",
     "jquery": "^3.4.1",
     "materialize-css": "^1.0.0-rc.2",
-    "netlify-cms-app": "^2.11.32",
+    "netlify-cms-app": "^2.12.7",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -39,6 +41,7 @@
     "react-slick": "^0.25.2",
     "rehype-document": "^4.0.0",
     "rehype-format": "^3.0.1",
+    "rehype-remark": "^8.0.0",
     "rehype-stringify": "^6.0.1",
     "remark-parse": "^7.0.2",
     "remark-rehype": "^6.0.0",
